Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-06 02:26+0000\n"
+"POT-Creation-Date: 2022-01-13 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,6 +54,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:17
 #: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:148
+#: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:301
 #, no-wrap
 msgid "boolean"
 msgstr ""
@@ -98,6 +99,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:238
 #: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:247
 #: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:256
+#: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:310
 #, no-wrap
 msgid "string"
 msgstr ""
@@ -487,4 +489,28 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:292
 #, no-wrap
 msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:300
+#, no-wrap
+msgid ""
+"[[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.shared]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.shared[quarkus.rest-client.\"config-key\".shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set to true to share the HTTP client between REST clients. There can be multiple shared clients distinguished by *name*, when no specific name is set, the name `__vertx.DEFAULT` is used. This property is applicable to reactive REST clients only.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-rest-client-restclient-config-rest-clients-config.adoc:309
+#, no-wrap
+msgid ""
+"[[quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.name]]`link:#quarkus-rest-client-restclient-config-rest-clients-config_quarkus.rest-client.-config-key-.name[quarkus.rest-client.\"config-key\".name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set the HTTP client name, used when the client is shared, otherwise ignored. This property is applicable to reactive REST clients only.\n"
+"--"
 msgstr ""
