--- a/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-08 02:19+0000\n"
+"POT-Creation-Date: 2022-01-13 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1544,6 +1544,13 @@ msgstr "リアクティブな PostgreSQL 固有の設定"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/datasource.adoc:691
+#, fuzzy, no-wrap
+#| msgid "Reactive PostgreSQL Specific Configuration"
+msgid "Reactive Oracle Specific Configuration"
+msgstr "リアクティブな PostgreSQL 固有の設定"
+
+#. type: Title ===
+#: upstream/_versions/main/guides/datasource.adoc:695
 #, no-wrap
 msgid "Reactive PostgreSQL Specific Configuration"
 msgstr "リアクティブな PostgreSQL 固有の設定"
