--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-11 02:21+0000\n"
+"POT-Creation-Date: 2022-01-13 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1623,7 +1623,6 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:799
-#: upstream/_versions/main/guides/security-openid-connect-client.adoc:860
 #, no-wrap
 msgid ""
 "@RegisterRestClient\n"
@@ -1740,6 +1739,25 @@ msgstr ""
 "import io.quarkus.oidc.token.propagation.JsonWebToken;\n"
 
 #. type: delimited block -
+#: upstream/_versions/main/guides/security-openid-connect-client.adoc:860
+#, fuzzy, no-wrap
+#| msgid ""
+#| "@RegisterRestClient\n"
+#| "@AccessToken\n"
+#| "@Path(\"/\")\n"
+#| "public interface ProtectedResourceService {\n"
+msgid ""
+"@RegisterRestClient\n"
+"@JsonWebToken\n"
+"@Path(\"/\")\n"
+"public interface ProtectedResourceService {\n"
+msgstr ""
+"@RegisterRestClient\n"
+"@AccessToken\n"
+"@Path(\"/\")\n"
+"public interface ProtectedResourceService {\n"
+
+#. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:872
 #, no-wrap
 msgid ""
@@ -1753,10 +1771,15 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:877
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "@RegisterRestClient\n"
+#| "@RegisterProvider(JsonWebTokenTokenRequestFilter.class)\n"
+#| "@Path(\"/\")\n"
+#| "public interface ProtectedResourceService {\n"
 msgid ""
 "@RegisterRestClient\n"
-"@RegisterProvider(JsonWebTokenTokenRequestFilter.class)\n"
+"@RegisterProvider(JsonWebTokenRequestFilter.class)\n"
 "@Path(\"/\")\n"
 "public interface ProtectedResourceService {\n"
 msgstr ""
