--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-jib.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-container-image-jib.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-11 02:20+0000\n"
+"POT-Creation-Date: 2022-01-13 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -72,7 +72,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The base image to be used when a container image is being produced for the native binary build\n"
+"The base image to be used when a container image is being produced for the native binary build. The default is \"quay.io/quarkus/quarkus-micro-image\". You can also use \"registry.access.redhat.com/ubi8/ubi-minimal\" which is a bigger base image, but provide more built-in utilities such as the microdnf package manager.\n"
 "--"
 msgstr ""
 
