--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-01-06 02:26+0000\n"
+"POT-Creation-Date: 2022-01-13 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -67,6 +67,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:161
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:170
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:179
+#: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:233
 #, no-wrap
 msgid "string"
 msgstr ""
@@ -152,6 +153,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:71
+#: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:224
 #, no-wrap
 msgid "boolean"
 msgstr ""
@@ -366,4 +368,28 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:215
 #, no-wrap
 msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:223
+#, no-wrap
+msgid ""
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.shared]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.shared[quarkus.rest-client.\"config-key\".shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set to true to share the HTTP client between REST clients. There can be multiple shared clients distinguished by *name*, when no specific name is set, the name `__vertx.DEFAULT` is used. This property is applicable to reactive REST clients only.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-restclient-config-rest-client-config.adoc:232
+#, no-wrap
+msgid ""
+"[[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.name]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.name[quarkus.rest-client.\"config-key\".name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set the HTTP client name, used when the client is shared, otherwise ignored. This property is applicable to reactive REST clients only.\n"
+"--"
 msgstr ""
