--- a/l10n/po/ja_JP/_posts/2022-01-13-quarkus-insights-qanda3.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-13-quarkus-insights-qanda3.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-insights-qanda3.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-insights-qanda3.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: Ask (Quark)us anything!\n"
@@ -34,23 +34,34 @@ msgid ""
 "author: maxandersen\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: Quarkに何でも聞いてください。\n"
+"date: 2022-01-13\n"
+"tags: insights\n"
+"synopsis: 来週の月曜日（1月17日）には、皆さんからの質問をもとにQuarkus Insightsを行います。\n"
+"author: maxandersen\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-insights-qanda3.adoc:11
+#, fuzzy
 msgid "Time for our semi-annually Q&A session where we drive the episode using your questions!"
-msgstr ""
+msgstr "半期に一度のQ&amp;Aの時間です！皆さんからの質問でエピソードを進めていきます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-insights-qanda3.adoc:13
+#, fuzzy
 msgid "To submit questions comment on this blog or the matching post in our https://github.com/quarkusio/quarkus/discussions/categories/quarkus-blog-website[GitHub Discussion forum] or post a tweet using the hashtag https://twitter.com/hashtag/quarkusinsights[#quarkusinsights]."
-msgstr ""
+msgstr "質問を投稿するには、 link:https://github.com/quarkusio/quarkus/discussions/categories/quarkus-blog-website[GitHubのディスカッションフォーラム]でこのブログやマッチした記事にコメントするか、ハッシュタグ link:https://twitter.com/hashtag/quarkusinsights[「#quarkusinsights」]をつけてツイートしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-insights-qanda3.adoc:15
+#, fuzzy
 msgid "If an existing question is of interest do upvote questions found in our discussion or like a tweet and we'll use that to prioritize the questions."
-msgstr ""
+msgstr "既存の質問が気になる場合は、ディスカッションで見つけた質問をアップブレートしたり、ツイートに「いいね！」を押したりしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-insights-qanda3.adoc:17
+#, fuzzy
 msgid "See you Monday!"
-msgstr ""
+msgstr "では、月曜日にお会いしましょう"
