Add machine translation

--- a/l10n/po/ja_JP/_posts/2022-01-13-quarkus-insights-qanda3.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-13-quarkus-insights-qanda3.adoc.po
@@ -62,8 +62,9 @@ msgstr "既存の質問が気になる場合は、ディスカッションで見
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-insights-qanda3.adoc:17
+#, fuzzy
 msgid "See you Monday 17th January at https://quarkus.io/insights/ !"
-msgstr ""
+msgstr "1月17日（月）に https://quarkus.io/insights/ でお会いしましょう !"
 
 #, fuzzy
 #~ msgid "See you Monday!"
