--- a/l10n/po/ja_JP/_posts/2020-12-03-quarkiverse.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-12-03-quarkiverse.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-10-27 20:09+0000\n"
+"POT-Creation-Date: 2022-01-13 13:10+0000\n"
 "PO-Revision-Date: 2021-02-06 11:04+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -156,7 +156,9 @@ msgstr "エクステンションのリリースやドキュメントの公開を
 
 #. type: Plain text
 #: upstream/_posts/2020-12-03-quarkiverse.adoc:57
-msgid "The extension repository should be named `quarkiverse-<project>`"
+#, fuzzy
+#| msgid "The extension repository should be named `quarkiverse-<project>`"
+msgid "The extension repository should be named `quarkus-<project>`"
 msgstr "エクステンションのリポジトリの名前は `quarkiverse-<project&amp>`"
 
 #. type: Plain text
