Apply translation memory

--- a/l10n/po/ja_JP/_posts/2022-01-13-quarkus-aws-cloudwatch_extension.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-13-quarkus-aws-cloudwatch_extension.adoc.po
@@ -339,7 +339,7 @@ msgstr ""
 #: upstream/_posts/2022-01-13-quarkus-aws-cloudwatch_extension.adoc:152
 #, no-wrap
 msgid "Summary"
-msgstr ""
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-aws-cloudwatch_extension.adoc:155
@@ -360,7 +360,7 @@ msgstr ""
 #: upstream/_posts/2022-01-13-quarkus-aws-cloudwatch_extension.adoc:161
 #, no-wrap
 msgid "Links"
-msgstr ""
+msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-aws-cloudwatch_extension.adoc:163
