Update translation stats

--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -219,8 +219,10 @@ l10n/po/ja_JP/_guides/README.adoc.po, 75, 76, 306, 307 ,1%
 l10n/po/ja_JP/_guides/smallrye-kafka-outgoing.adoc.po, 83, 83, 937, 937 ,0%
 l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po, 101, 101, 1205, 1205 ,0%
 l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po, 16, 16, 327, 327 ,0%
+l10n/po/ja_JP/_posts/2022-01-13-quarkus-newsletter-16.adoc.po, 0, 6, 0, 168 ,100%
 l10n/po/ja_JP/_posts/2021-12-24-quarkus-2-6-1-final-released.adoc.po, 0, 16, 0, 234 ,100%
 l10n/po/ja_JP/_posts/2021-12-22-quarkus-2-6-0-final-released.adoc.po, 1, 63, 0, 1103 ,100%
+l10n/po/ja_JP/_posts/2021-12-16-quarkus-newsletter-15.adoc.po, 0, 6, 0, 171 ,100%
 l10n/po/ja_JP/_posts/2021-12-10-quarkus-2-5-2-final-released.adoc.po, 0, 14, 0, 153 ,100%
 l10n/po/ja_JP/_posts/2021-12-03-quarkus-devservices-testcontainers-podman.adoc.po, 0, 37, 0, 751 ,100%
 l10n/po/ja_JP/_posts/2021-12-03-intellij-quarkus-tools-1.9.0.adoc.po, 0, 13, 0, 152 ,100%
