--- a/l10n/po/ja_JP/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-01-10 18:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-01-17 14:25+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.6.2.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.6.2.Final released - Maintenance release'\n"
+"title: 'Quarkus 2.6.2.Final リリース - メンテナンスリリース'\n"
 "date: 2022-01-10\n"
 "tags: release\n"
 "synopsis: 2.6.2.Finalは、2.6リリーストレインのメンテナンスリリースです。Kogitoが復活しました。\n"
@@ -44,15 +44,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:11
-#, fuzzy
 msgid "We just released Quarkus 2.6.2.Final, our second maintenance release for our 2.6 release train."
-msgstr "Quarkus 2.6.2.Finalがリリースされました。"
+msgstr "Quarkus 2.6.2.Finalがリリースされました。2.6リリーストレインの2番目のリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:16
-#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.6 and contains small bugfixes, tweaks and documentation improvements.  It also brings back a working Kogito stack.  Due to some infrastructure problems, the Kogito team wasn't able to deliver a Kogito version working with Quarkus 2.6 before the holiday break but that's ancient history."
-msgstr "すでに 2.6 をお使いの方も安心してアップグレードできますし、小さなバグフィックスや調整、ドキュメントの改善も含まれています。また、動作するKogitoスタックも復活しました。インフラストラクチャーの問題により、Kogitoチームはホリデーブレイク前にQuarkus 2.6で動作するKogitoバージョンを提供することができませんでしたが、それは昔の話です。"
+msgstr "すでに 2.6 をお使いの方にとって安全なリリースであり、小さなバグフィックスや調整、ドキュメントの改善も含まれています。また、動作するKogitoスタックも復活しました。インフラストラクチャーの問題により、Kogitoチームはホリデーブレイク前にQuarkus 2.6で動作するKogitoバージョンを提供することができませんでしたが、それは昔の話です。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:18
@@ -61,25 +59,22 @@ msgstr "まだ2.6を使用していない場合は、 link:https://github.com/qu
 
 #. type: Title ==
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:19
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Kogito"
-msgstr "コギト"
+msgstr "Kogito"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:22
-#, fuzzy
 msgid "Working Kogito and OptaPlanner are back in Quarkus 2.6.2.Final."
-msgstr "作業中のKogitoとOptaPlannerがQuarkus 2.6.2.Finalで復活しました。"
+msgstr "動作するのKogitoとOptaPlannerがQuarkus 2.6.2.Finalで復活しました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:25
-#, fuzzy
 msgid "There is one change though: if you aren't doing so already, you will need to explicitly add the `quarkus-resteasy-jackson` extension to your Kogito and OptaPlanner applications."
-msgstr "しかし、1つの変更点があります。もし、まだそうしていないのであれば、KogitoとOptaPlannerのアプリケーションに `quarkus-resteasy-jackson` の拡張機能を明示的に追加する必要があります。"
+msgstr "しかし、1つの変更点があります。もし、まだそうしていないのであれば、KogitoとOptaPlannerのアプリケーションに `quarkus-resteasy-jackson` のエクステンションを明示的に追加する必要があります。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:28
-#, fuzzy
 msgid "We are working on supporting both RESTEasy Classic and RESTEasy Reactive with Kogito and OptaPlanner, this is the first step in this direction and this task will come to completion with Quarkus 2.7."
 msgstr "私たちは、RESTEasy ClassicとRESTEasy Reactiveの両方をKogitoとOptaPlannerでサポートすることに取り組んでいます。これはこの方向での最初のステップであり、このタスクはQuarkus 2.7で完了する予定です。"
 
@@ -91,9 +86,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:32
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.6.2.Final[the full changelog of 2.6.2.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.6.2.Final[2.6.2.Finalの完全な変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.6.2.Final[2.6.2.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-01-10-quarkus-2-6-2-final-released.adoc:33
