--- a/l10n/po/ja_JP/_posts/2021-12-16-quarkus-newsletter-15.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-16-quarkus-newsletter-15.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-01-13 22:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-01-17 14:33+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-16-quarkus-newsletter-15.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-16-quarkus-newsletter-15.adoc:9
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Newsletter #15 - December'\n"
@@ -36,25 +36,24 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: クォークス・ニュースレター第15号 12月号」のご案内\n"
+"title: 'Quarkus Newsletter #15 - December'\n"
 "date: 2021-12-16\n"
 "tags: newsletter\n"
 "synopsis: Quarkusとその周辺の最新のオンラインストーリー、記事、ビデオを提供します。\n"
 "author: jcobb\n"
 "bibquery: [\"pub.urldate > '2021-11-11'\", \"pub.urldate <= '2021-12-16'\"]\n"
 "---\n"
+"\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-16-quarkus-newsletter-15.adoc:13
-#, fuzzy
 msgid "The December Newsletter has been published! This month, you can find articles about; testing a Quarkus Kafka application, exploring Java 17 features with Quarkus, Quarkus bean discovery with Jandex indexing, automating Quarkus with Gitlab, boosting throughput with RESTEasy Reactive in Quarkus 2.2, and Azure resources operator with Quarkus."
-msgstr "12月のニュースレターが発行されました。今月は、Quarkus Kafkaアプリケーションのテスト、QuarkusでのJava 17機能の探求、JandexインデックスによるQuarkus Beanの発見、GitlabによるQuarkusの自動化、Quarkus 2.2でのRESTEasy Reactiveによるスループットの向上、QuarkusでのAzureリソースオペレータに関する記事が掲載されています。"
+msgstr "12月のニュースレターが発行されました。今月は、Quarkus Kafkaアプリケーションのテスト、QuarkusでのJava 17機能の探求、JandexインデックスによるQuarkus Beanの発見、GitlabによるQuarkusの自動化、Quarkus 2.2でのRESTEasy Reactiveによるスループットの向上、QuarkusでのAzureリソースオペレーターに関する記事が掲載されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-16-quarkus-newsletter-15.adoc:15
-#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/14/[Newsletter #15]!"
-msgstr "link:https://quarkus.io/newsletter/14/[ニューズレター15号]をご覧ください。"
+msgstr "link:https://quarkus.io/newsletter/14/[Newsletter 15号]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-16-quarkus-newsletter-15.adoc:17
