--- a/l10n/po/ja_JP/_posts/2022-01-13-quarkus-newsletter-16.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-13-quarkus-newsletter-16.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-01-13 22:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-01-17 14:31+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-newsletter-16.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-newsletter-16.adoc:9
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Newsletter #16 - January'\n"
@@ -36,7 +36,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus Newsletter #16 - January'\n"
+"title: 'Quarkus Newsletter #16 - 1月号'\n"
 "date: 2022-01-13\n"
 "tags: newsletter\n"
 "synopsis: Quarkusとその周辺の最新のオンラインストーリー、記事、ビデオを提供します。\n"
@@ -46,15 +46,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-newsletter-16.adoc:13
-#, fuzzy
 msgid "The January Newsletter has been published! This month, you can find articles about the Java InfoQ Trend report for December 2021, how to use Quarkus with the service binding operator, how to run Qurkus applications on Kubernetes, and lessons learned migrating Spring Boot to Quarkus."
-msgstr "1月のニュースレターが発行されました!今月は、2021年12月のJava InfoQ Trendレポート、サービスバインディング演算子を使ったQuarkusの使い方、Kubernetes上でQurkusアプリケーションを実行する方法、Spring BootをQuarkusに移行する際の教訓などの記事が掲載されています。"
+msgstr "1月のニュースレターが発行されました!今月は、2021年12月のJava InfoQ Trendレポート、サービスバインディングオペレーターを使ったQuarkusの使い方、Kubernetes上でQurkusアプリケーションを実行する方法、Spring BootをQuarkusに移行する際の教訓などの記事が掲載されています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-newsletter-16.adoc:15
-#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/14/[Newsletter #16]!"
-msgstr "link:https://quarkus.io/newsletter/14/[ニュースレター第16号]をご覧ください。"
+msgstr "link:https://quarkus.io/newsletter/14/[ニュースレター #16]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-01-13-quarkus-newsletter-16.adoc:17
