--- a/l10n/po/ja_JP/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-15 21:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-01-17 14:50+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.5.3.Final released - Maintenance release'\n"
@@ -44,7 +44,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:11
-#, fuzzy
 msgid "We just released Quarkus 2.5.3.Final, a maintenance release for our 2.5 release train containing bugfixes and documentation improvements."
 msgstr "Quarkus 2.5.3.Finalは、バグ修正とドキュメントの改善を含む、Quarkus 2.5リリーストレインのメンテナンスリリースです。"
 
@@ -66,9 +65,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:19
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.5.3.Final[the full changelog of 2.5.3.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.5.3.Final[2.5.3.Final の全変更履歴は、GitHub でご覧いた]だけます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.5.3.Final[2.5.3.Final の全変更履歴は、GitHub] でご覧いただけます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-15-quarkus-2-5-3-final-released.adoc:20
