--- a/l10n/po/ja_JP/_includes/homepage-performance-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-performance-band.html.po
@@ -7,17 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-03 14:14+0000\n"
-"PO-Revision-Date: 2021-12-03 21:58+0900\n"
+"PO-Revision-Date: 2022-01-17 17:36+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Content of: <div><div><div><h2>
 #: upstream/_includes/homepage-performance-band.html:4
-#, fuzzy
 msgid "Quarkus offers unequaled performance"
-msgstr "圧倒的なパフォーマンスを発揮するQuarkus"
+msgstr "Quarkusは圧倒的なパフォーマンスを発揮します"
