Add machine translation

--- a/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
+++ b/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
@@ -71,8 +71,9 @@ msgstr "初めてのインストールの場合は、シェルを再起動する
 
 #. type: Content of: <div><div><div><h4>
 #: upstream/_includes/get-started-code-steps.html:27
+#, fuzzy
 msgid "Or install via SDKMAN!"
-msgstr ""
+msgstr "または、SDKMANでインストールしてください"
 
 #. type: Content of: <div><div><div><div><div><pre>
 #: upstream/_includes/get-started-code-steps.html:30
