Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-09 02:16+0000\n"
+"POT-Creation-Date: 2022-01-18 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -74,3 +74,22 @@ msgstr ""
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:34
+#, no-wrap
+msgid ""
+"[[quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.subprotocols]]`link:#quarkus-smallrye-graphql-client-general-config-items_quarkus.smallrye-graphql-client.-clients-.subprotocols[quarkus.smallrye-graphql-client.\"clients\".subprotocols]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"WebSocket subprotocols that should be supported by this client for running subscriptions over websockets. Allowed values are: - `graphql-ws` for the deprecated Apollo protocol - `graphql-transport-ws` for the newer GraphQL over WebSocket protocol If multiple protocols are provided, the actual protocol to be used will be subject to negotiation with the server. To make the client work with the dummy protocol implemented by SmallRye GraphQL 1.4 server-side, leave this empty.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-client-general-config-items.adoc:35
+#, fuzzy, no-wrap
+#| msgid "string"
+msgid "list of string"
+msgstr "string"
