--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2022-01-18 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -40,7 +40,7 @@ msgid "Default"
 msgstr "デフォルト"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:63
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:72
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config_quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config_quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy[quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy]`\n"
@@ -51,6 +51,15 @@ msgid ""
 "\n"
 "Defines how complete indexing should be before resuming the application thread\n"
 "after a database transaction is committed.\n"
+"\n"
+"[WARNING]\n"
+"====\n"
+"Indexing synchronization is only relevant when coordination is disabled (which is the default).\n"
+"\n"
+"With the <<coordination,`outbox-polling` coordination strategy>>,\n"
+"indexing happens in background threads and is always asynchronous;\n"
+"the behavior is equivalent to the `write-sync` synchronization strategy.\n"
+"====\n"
 "\n"
 "Available values:\n"
 "\n"
@@ -99,21 +108,21 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:64
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:130
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:73
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:148
 #, no-wrap
 msgid "string"
 msgstr "string"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:67
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:133
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:76
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:151
 #, no-wrap
 msgid "`write-sync`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:73
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:82
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config_quarkus.hibernate-search-orm.automatic-indexing.enable-dirty-check]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config_quarkus.hibernate-search-orm.automatic-indexing.enable-dirty-check[quarkus.hibernate-search-orm.automatic-indexing.enable-dirty-check]`\n"
@@ -126,21 +135,21 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:74
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:140
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:83
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:158
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:77
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:142
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:86
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:160
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:129
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:147
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config_quarkus.hibernate-search-orm.-persistence-unit-name-.automatic-indexing.synchronization.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config_quarkus.hibernate-search-orm.-persistence-unit-name-.automatic-indexing.synchronization.strategy[quarkus.hibernate-search-orm.\"persistence-unit-name\".automatic-indexing.synchronization.strategy]`\n"
@@ -151,6 +160,15 @@ msgid ""
 "\n"
 "Defines how complete indexing should be before resuming the application thread\n"
 "after a database transaction is committed.\n"
+"\n"
+"[WARNING]\n"
+"====\n"
+"Indexing synchronization is only relevant when coordination is disabled (which is the default).\n"
+"\n"
+"With the <<coordination,`outbox-polling` coordination strategy>>,\n"
+"indexing happens in background threads and is always asynchronous;\n"
+"the behavior is equivalent to the `write-sync` synchronization strategy.\n"
+"====\n"
 "\n"
 "Available values:\n"
 "\n"
@@ -199,7 +217,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:139
+#: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config.adoc:157
 #, no-wrap
 msgid ""
 "[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config_quarkus.hibernate-search-orm.-persistence-unit-name-.automatic-indexing.enable-dirty-check]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-automatic-indexing-config_quarkus.hibernate-search-orm.-persistence-unit-name-.automatic-indexing.enable-dirty-check[quarkus.hibernate-search-orm.\"persistence-unit-name\".automatic-indexing.enable-dirty-check]`\n"
